<resources>
    <string name="app_name">Platon</string>
    <string name="logo_desc_str">TODO</string>
    <string name="sign_up_str">Sign Up</string>
    <string name="exit_str">Exit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="logo_o_str">Platon O shape</string>
    <string name="progressbar_str">TODO</string>
    <string name="plat_str">PLAT</string>
    <string name="n_str">N</string>
    <string name="from_str">from</string>
    <string name="search_str">Search</string>
    <string name="register_str">Register</string>
    <string name="login_str">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_str">Home</string>
    <string name="logout_str">Logout</string>
    <string name="acceptterms_str">I accept the terms and conditions</string>
    <string name="dontHave_str">Don\'t have an account?</string>
    <string name="already_have_str">Already have an account?</string>
    <string name="prompt_name">Name</string>
    <string name="remember_me_str">Remember me</string>
    <string name="username_str">Username</string>
    <string name="text_follower">Followers</string>
    <string name="text_following">Following</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="firstName_str">First Name</string>
    <string name="lastName_str">Last Name</string>

    <string name="profile_str">Profile</string>
    <string name="workspaces_str">Workspaces</string>
    <string name="phone_str">Phone</string>
    <string name="forgot_password_str">Forgot password?</string>
    <string name="send_code_str">Send Code</string>
    <string name="action_str">action</string>
    <string name="who_str">Who</string>
    <string name="toWhom_str">to whom</string>
    <string name="time_str">Time</string>
    <string name="project_title_str">Project Title</string>
    <string name="desc_str">Description</string>
    <string name="why_str">The reason of trending</string>
    <string name="todo_str">TODO</string>
    <string name="trending_projects_str">Trending Projects</string>
    <string name="activity_stream_str">Activity Stream</string>
    <string name="upcoming_events_str">Upcoming Events</string>
    <string name="upcoming_event_str">Upcoming Event</string>
    <string name="date_str">Date</string>
    <string name="type_str">Type</string>
    <string name="users_str">Users</string>
    <string name="conf_pass_str">Confirm password</string>
    <string name="new_pass_str">New password</string>
    <string name="reset_pass_str">Reset Password</string>
    <string name="token_str">Keycode</string>
    <string name="send_token_str">Send Keycode</string>
    <string name="job_str">Job</string>
    <string name="old_password">Old Password</string>
    <string name="projects">Projects</string>
    <string name="your_info">Information</string>
    <string name="text_follow">Follow</string>
    <string name="notification_str">Notifications</string>
    <string name="gs_url_request">Google Scholar Account URL</string>
    <string name="rg_url_request">Research Gate Account URL</string>
    <string name="pp_url_request">Profile Page URL</string>
    <string name="loading_str">Loading…</string>
    <string name="project_description_str">Project Description</string>
    <string name="text_add_project">Add Project</string>
    <string name="project_year_str">Year</string>
    <string name="text_edit_project">Edit Project</string>
    <string name="text_delete_project">Delete Project</string>
    <string name="private_page_warning_str">To see the details, please send a follow request.</string>
    <string name="private_profile_str">Private Profile</string>
    <string name="general_str">General</string>
    <string name="personal_str">Personal</string>
    <string name="see_notifications_for_str">See notifications for:</string>
    <string name="search_among_str">Search among:</string>
    <string name="workspace_state_str">State</string>
    <string name="workspace_title_str">Workspace Title</string>
    <string name="institution_str">Institution</string>
    <string name="enter_your_job_str">Enter your job</string>
    <string name="no_rate_str">No rating yet</string>
    <string name="skills">Skills</string>
    <string name="skill_str">Skill</string>
    <string name="events_str">Events</string>
    <string name="add_str">Add</string>
    <string name="filter_by_job_str">Filter by job:</string>
    <string name="add_sorkspace_str">Add Workspace</string>
    <string name="max_collab_str">Maximum Number of Collaborators</string>
    <string name="requirements_str">Requirements</string>
    <string name="private_workspace_str">Private Workspace</string>
    <string name="edit_workspace_str">Edit Workspace</string>
    <string name="delete_workspace_str">Delete Workspace</string>
    <string name="deadline_str">Deadline</string>
    <string name="collaborators">Collaborators</string>
    <string name="location_str">Location</string>
    <string name="researches_STR">Researches</string>
    <string name="private_ws_str">Private Workspace</string>
    <string name="public_ws_str">Public Workspace</string>
    <string name="state_search_for_collab_str">Search For Collaborators State</string>
    <string name="state_ongoing_str">Ongoing State</string>
    <string name="state_finished_str">Finished</string>
    <string name="is_private_str">Is Private</string>
    <string name="requirement_str">Requirement</string>

    <string name="filter_by_skill_str">Filter by Skill</string>
    <string name="filter_by_event_str">Filter by Event</string>
    <string name="link_scholar_str">Link Scholar</string>
    <string name="link_researchgate_str">Link ResearchGate</string>
    <string name="enter_url_str">Enter URL</string>
    <string name="link_str">Link</string>
    <string name="accept_link_str">I accept to share my information with Platon!</string>
    <string name="comments_str">Comments</string>
    <string name="issue_str">Issue</string>
    <string name="issue_title_str">Issue Title</string>
    <string name="issue_description_str">Description of Issue</string>
    <string name="issue_add_str">Add Issue</string>
    <string name="assignee">Assignee</string>
    <string name="issue_edit">Edit Issue</string>
    <string name="folders">Folders</string>
    <string name="files_str">Files</string>
    <string name="folder_name_str">Folder Name</string>
    <string name="update_str">Update</string>
    <string name="milestone_str">Milestone</string>
    <string name="creator_str">Created by</string>
    <string name="sort_by_Str">Sort by:</string>
    <string name="creator_name_str">Creator Name</string>
    <string name="creator_surname_str">Creator Surname</string>
    <string name="starting_from_str">Starting from</string>
    <string name="starting_to_str">Starting to</string>
    <string name="deadline_from_str">Deadline from</string>
    <string name="deadline_to_str">Deadline To</string>
    <string name="due_to_str">Due to</string>
    <string name="add_milestone_str">Add Milestone</string>
    <string name="milestone_title_str">Milestone</string>
    <string name="milestone_title_str_title">Milestone Title</string>
    <string name="invitations_str">Invitations</string>
    <string name="applications_str">Applications</string>
    <string name="delete_issue_str">Delete Issue</string>
    <string name="add_comment_str">Add Comment</string>
    <string name="set_rating_str">Set rating [1–5]</string>
    <string name="directory_Str">Directory</string>
    <string name="send_str">Send</string>
    <string name="comment_owner_str">Comment Owner</string>
    <string name="recommended_str">Recommended</string>
    <string name="workspace_recommendations_str">Workspace Recommendations</string>
    <string name="follow_recommendation_str">Follow Recommendations</string>
    <string name="send_report_str">Send Report</string>
    <string name="report_details_optional_str">Report Details ( optional )</string>
    <string name="report_user_str">Report User</string>

</resources>