<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cell_card"
    card_view:cardElevation="@dimen/xxx_small"
    android:layout_margin="@dimen/x_small"
    card_view:contentPadding="@dimen/medium"
    card_view:cardBackgroundColor="@color/secondary_blue_transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/expand_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:maxLines="1"
            android:text="@string/workspace_title_str"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/project_title_text_size" />

        <TextView
            android:id="@+id/deadline_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_tv"
            android:layout_alignParentEnd="true"
            android:text="@string/deadline_str"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/subtitle_text_size" />
        <TextView
            android:id="@+id/worksapce_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/deadline_tv"
            android:layout_alignParentEnd="true"
            android:text="@string/workspaces_str"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/subtitle_text_size" />
        <TextView
            android:id="@+id/type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/worksapce_name_tv"
            android:layout_alignParentEnd="true"
            android:text="@string/type_str"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/subtitle_text_size" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>